# StockResearcher

./: .env.example  .gitignore  FRAMEWORK.md  README.md  pyproject.toml
.codex/environments/: environment.toml
macos/: Package.swift
macos/Sources/StockResearcherApp/App/: StockResearcherApp.swift
macos/Sources/StockResearcherApp/Models/: APIModels.swift  AppPreferences.swift  MarkdownBlock.swift
macos/Sources/StockResearcherApp/Services/: APIClient.swift  BackendService.swift
macos/Sources/StockResearcherApp/Stores/: AppStore.swift
macos/Sources/StockResearcherApp/Views/: ChatView.swift  ContentView.swift  EnvironmentSettingsView.swift  MarkdownDocumentView.swift  NewReportView.swift  ReportActionsMenu.swift  ReportDetailView.swift  SettingsView.swift  SidebarView.swift
macos/Tests/StockResearcherTests/: APIModelsTests.swift
packaging/: AppIcon.icns  backend.spec  backend_entry.py
script/: build_and_run.sh  build_release.sh
src/research_agent/: __init__.py  api.py  chat_agent.py  cli.py  config.py  connectors.py  env_config.py  exceptions.py  llm.py  models.py  observability.py  orchestrator.py  report_writer.py  retrieval.py  storage.py  text.py
tests/: test_chat_agent.py  test_prototype.py  test_retrieval.py
